--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -31,6 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <TextView
+                android:id="@id/user_email"
                 android:drawableLeft="@drawable/ic_mail_outline"
                 android:drawablePadding="4dp"
                 android:drawableTint="#888"
