--- a/app/src/main/res/layout/edit_user_profile.xml
+++ b/app/src/main/res/layout/edit_user_profile.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/user_fotoprofil"
                 android:src="@mipmap/ic_user_round"
                 android:layout_gravity="center"
                 android:layout_width="70dp"
