--- a/app/src/main/res/layout/postingan_item.xml
+++ b/app/src/main/res/layout/postingan_item.xml
@@ -123,6 +123,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <ImageButton
+                        android:id="@+id/btn_komentar"
                         android:layout_width="26dp"
                         android:layout_height="26dp"
                         android:background="#fff"
