--- a/app/src/main/res/layout/notif_item.xml
+++ b/app/src/main/res/layout/notif_item.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
+    android:orientation="vertical"
+
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginRight="10dp"
-        android:src="@mipmap/ic_user_round"
-        android:id="@+id/pengguna_image"/>
-    <TextView
-        android:text="Gus Arisna menyukai postingan Anda 'Hakdjfakjdfkjakfjakdjfkdjfkdjfkdjfdfkjfk...'"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            android:src="@mipmap/ic_user_round"
+            android:id="@+id/from_user_notif"/>
+        <TextView
+            android:id="@+id/isi_notif"
+            android:textColor="#555"
+            android:layout_gravity="center"
+            android:text="Gus Arisna menyukai postingan Anda ''"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#eee"></View>
 </LinearLayout>
